--- a/Assets/ui/layout/main-menu.xml
+++ b/Assets/ui/layout/main-menu.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
-
 <box width="100%" height="100%" style='backgroundImage:"assets/ui/background.png"'>
-
-    <image resource="assets/ui/title.png" id="car" height="30%" horizontalAlign="center" verticalAlign="top" />
-    <vbox id="menu" width="600">
-        <button id="start" text="Start" width="100%"/>
-        <button id="options" text="Options" width="100%" />
-        <button id="about" text="About" width="100%" />
-        <button id="quit" text="Quit" width="100%" />
-    </vbox>
+<image resource="assets/ui/title.png" id="car" height="30%" horizontalAlign="center" verticalAlign="top" />
+<vbox width="600" id="" verticalAlign="center" horizontalAlign="center">
+    <button id="start" text="Start"  width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 10"/>
+    <button id="options" text="Options" width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 10" />
+    <button id="about" text="About" width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 10" />
+    <button id="quit" text="Quit" width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 10" />
+</vbox>
 </box>
