--- a/Assets/ui/layout/game.xml
+++ b/Assets/ui/layout/game.xml
@@ -14,33 +14,21 @@
 
     </style>
 
-    <!-- Das Spiel-Element wird hier dynamisch eingefügt -->
+    <box x="0" y="0" width="650" height="80" style="visible: true;" id="hud">
 
-    <text id="countdown" style="visible: true; color: #FFFFFF" horizontalAlign="center" verticalAlign="center" />
-
-
-    <box x="0" y="0" width="100%" height="100%" style="visible: false;" id="hud">
-
-        <box verticalAlign="top" horizontalAlign="right" style="paddingRight: 50; paddingTop: 30;" >
-            <vbox style='backgroundImage:"assets/ui/background-grey.png"; padding: 8; paddingRight: 20' >
+        <box width="100%" height="100%" verticalAlign="top" horizontalAlign="left" style="paddingRight: 50; paddingTop: 0;" >
+            <vbox width="100%" height="100%"
+                    style='backgroundImage:"assets/ui/background-grey.png"; padding: 8; paddingTop: 0; paddingRight: 20' >
                 <hbox>
-                    <text id="minutes" style="fontSize: 30; fontBold: true; color: #FFFFFF;" verticalAlign="bottom" />
-                    <text id="miliseconds" style="fontSize: 20; color: #FFFFFF; alpha: 0.7;" verticalAlign="bottom"/>
+                    <text id="score" style="fontSize: 20; fontBold: true; color: #FFFFFF;" verticalAlign="top" />
+                    <text id="balls-remaining" style="fontSize: 20; color: #FFFFFF; alpha: 0.7;" verticalAlign="top"/>
                 </hbox>
                 <hbox>
-                    <text id="activatedcheckpoints" style="fontSize: 30; fontBold: true; color: #FFFFFF;" />
-                    <text id="totalcheckpoints" style="fontSize: 22; color: #FFFFFF; alpha: 0.7;"  verticalAlign="bottom"/>
+                    <text id="fps" style="fontSize: 20; fontBold: true; color: #FFFFFF;" />
+                    <text id="total-memory" style="fontSize: 22; color: #FFFFFF; alpha: 0.7;"  verticalAlign="bottom"/>
                 </hbox>
             </vbox>
         </box>
-
-
-        <absolute id="infobox-container" style="visible: false;">
-            <vbox x="70" y="50" id="infobox" style='backgroundImage:"assets/ui/transparent-background.png"; paddingTop: 35; paddingBottom: 15; paddingRight: 15; paddingLeft: 15;' >
-
-            </vbox>
-            <image x="85" y="20" width="50" height="50" resource="assets/ui/infobox.png" />
-        </absolute>
 
     </box>
 
