--- a/Assets/ui/layout/game.xml
+++ b/Assets/ui/layout/game.xml
@@ -14,7 +14,7 @@
 
     </style>
 
-    <box x="0" y="0" width="650" height="80" style="visible: true;" id="hud">
+    <box x="0" y="0" width="650" height="80" horizontalAlign="center" style="visible: true;" id="hud">
 
         <box width="100%" height="100%" verticalAlign="top" horizontalAlign="left" style="paddingRight: 50; paddingTop: 0;" >
             <vbox width="100%" height="100%"
