--- a/Assets/ui/layout/style.css
+++ b/Assets/ui/layout/style.css
@@ -3,8 +3,6 @@
     backgroundColor: #65464;
 }
 
-
-
 #menu{
     spacingY: 20;
     verticalAlignment: center;
@@ -42,8 +40,41 @@
     verticalAlignment: left;
 }
 
-#menu Button{
+
+
+Button {
     fontSize: 20;
+    background-color: 0xff9600;
     paddingBottom: 10;
     paddingTop: 10;
+    border-spacing: 10;
+    border-color: 0x333333;
+	
 }
+
+Button:over{
+    fontSize: 20;
+	background-color: 0xffb300;
+    paddingBottom: 10;
+    paddingTop: 10;
+    border-color: 0x333333;
+}
+
+Button:disabled{
+    fontSize: 20;
+	background-color: 0x4D1E00;
+    paddingBottom: 10;
+    paddingTop: 10;
+    border-color: 0x333333;
+}
+
+Button:down{
+    fontSize: 20;
+	background-color: 0xCF5300;
+    paddingBottom: 10;
+    paddingTop: 10;
+    border-color: 0x333333;
+}
+
+
+
