--- a/Assets/ui/layout/game.xml
+++ b/Assets/ui/layout/game.xml
@@ -18,7 +18,7 @@
 
         <box width="100%" height="100%" verticalAlign="top" horizontalAlign="left" style="paddingRight: 50; paddingTop: 0;" >
             <vbox width="100%" height="100%"
-                    style='backgroundImage:"assets/ui/background-grey.png"; padding: 8; paddingTop: 0; paddingRight: 20' >
+                    style='padding: 8; paddingTop: 0; paddingRight: 20' >
                 <hbox>
                     <text id="score" style="fontSize: 20; fontBold: true; color: #FFFFFF;" verticalAlign="top" />
                     <text id="balls-remaining" style="fontSize: 20; color: #FFFFFF; alpha: 0.7;" verticalAlign="top"/>
