Fixed some problems with the size

--- a/Assets/ui/layout/main-menu.xml
+++ b/Assets/ui/layout/main-menu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <box width="100%" height="100%" style='background-color:0x333333'>
-<container id="title" width="100%" height="30%" horizontalAlign="center" verticalAlign="top" />
-<vbox width="600" id="" verticalAlign="center" horizontalAlign="center">
-    <button id="start" text="Start"  width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 10"/>
-    <button id="options" text="Options" width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 10" />
-    <button id="about" text="About" width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 10" />
-    <button id="quit" text="Quit" width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 10" />
-</vbox>
+
+    <vbox width="600" id="" verticalAlign="center" horizontalAlign="center">
+        <text text="Brick Breaker" verticalAlign="top" horizontalAlign="center" style="fontSize:100; color:0xff9600;"/>
+        <button id="start" text="Start"  width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 40"/>
+        <button id="options" text="Options" width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 40" />
+        <button id="about" text="About" width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 40" />
+        <button id="quit" text="Quit" width="100%" style="fontSize: 20; paddingBottom: 10; paddingTop: 40" />
+    </vbox>
 </box>
 
