--- a/Assets/ui/layout/game-beaten.xml
+++ b/Assets/ui/layout/game-beaten.xml
@@ -5,7 +5,7 @@
     <box width="100%" height="85%" verticalAlign="top" style="paddingTop: 30">
 
 
-        <text text="You have the game conquered !" verticalAlign="top" horizontalAlign="center" style="fontSize:40;color:0xFFFFFF;"/>
+        <text text="You have the game conquered !" verticalAlign="top" horizontalAlign="center" style="fontSize:40;color:0xff9600;"/>
 
         <image resource="assets/ui/game-beaten.png" id="game-beaten" height="60%" />
 
