--- a/Assets/ui/layout/game.xml
+++ b/Assets/ui/layout/game.xml
@@ -1,22 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
-<box width="100%" height="100%">
+<box width="100%" height="100%" style="visible: true; backgroundImage:'assets/ui/background.png';">
 
-    <style>
-        #infobox Text {
-        color: #FFFFFF;
-        fontSize: 18;
-        }
+    <box x="0" y="0" width="600" height="700" horizontalAlign="center"
+         id="hud">
 
-        #infobox Image {
-        width: 100%;
-        }
-
-    </style>
-
-    <box x="0" y="0" width="650" height="80" horizontalAlign="center" style="visible: true;" id="hud">
-
-        <box width="100%" height="100%" verticalAlign="top" horizontalAlign="left" style="paddingRight: 50; paddingTop: 0;" >
+        <box width="100%" height="100%" verticalAlign="top" horizontalAlign="left"
+             style="paddingRight: 50; paddingTop: 0;" >
             <vbox width="100%" height="100%"
                     style='padding: 8; paddingTop: 0; paddingRight: 20' >
                 <hbox>
@@ -27,7 +17,10 @@
                     <text id="fps" style="fontSize: 20; fontBold: true; color: #FFFFFF;" />
                     <text id="total-memory" style="fontSize: 22; color: #FFFFFF; alpha: 0.7;"  verticalAlign="bottom"/>
                 </hbox>
+                <hbox id="board">
+                </hbox>
             </vbox>
+
         </box>
 
     </box>
