--- a/Assets/ui/layout/level-menu.xml
+++ b/Assets/ui/layout/level-menu.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
 <box width="100%" height="100%" style='backgroundImage:"assets/ui/background.png";' >
-	<container id="title" width="100%" height="30%" horizontalAlign="center" verticalAlign="top" />
-    <box width="100%" height="85%" verticalAlign="top" style="paddingTop: 30">
-
-		
-        
-
-
+	<box width="100%" height="85%" verticalAlign="top" style="paddingTop: 30">
+        <text text="Select Level" verticalAlign="top" horizontalAlign="center" style="fontSize:80;color:0xff9600;"/>
         <grid columns="3" id="level-container" >
 
         </grid>
