--- a/Assets/ui/layout/level-menu.xml
+++ b/Assets/ui/layout/level-menu.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
 <box width="100%" height="100%" style='backgroundImage:"assets/ui/background.png";' >
-	<box width="100%" height="85%" verticalAlign="top" style="paddingTop: 30">
-        <text text="Select Level" verticalAlign="top" horizontalAlign="center" style="fontSize:80;color:0xff9600;"/>
-        <grid columns="3" id="level-container" >
+
+    <box id="level-box" width="33%" height="85%" horizontalAlign="center">
+        <text id="title" text="Select Level" verticalAlign="top" horizontalAlign="center"
+              style="color:0xff9600;"/>
+
+        <grid columns="3" id="level-container" horizontalAlign="center" verticalAlign="center" >
 
         </grid>
 
-
-        <button text="Back to main menu" id="main-menu" horizontalAlign="center" verticalAlign="bottom"/>
+        <button text="Back to main menu" id="main-menu" horizontalAlign="center" verticalAlign="bottom"
+                style="bottom: 10"/>
 
 
     </box>
